--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 </div>
             </nav>
             <img src="media/468-thumbnail.png" class="song-img">
+            <h1>Despacito</h1>
+            <p>Luis Fonsi Ft. Nelly</p>
         </div>
     </div>
 </body>
