--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <img src="media/468-thumbnail.png" class="song-img">
             <h1>Despacito</h1>
             <p>Luis Fonsi Ft. Nelly</p>
+
+            <audio controls>
+                <source src="media/Go! - NEFFEX.mp3" type="audio/mpeg">
+            </audio>
         </div>
     </div>
 </body>
