--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <audio controls>
                 <source src="media/Go! - NEFFEX.mp3" type="audio/mpeg">
             </audio>
+            <input type= "range" value="0" id="progress"> 
         </div>
     </div>
 </body>
