--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Despacito</h1>
             <p>Luis Fonsi Ft. Nelly</p>
 
-            <audio controls id="song">
+            <audio id="song">
                 <source src="media/Go! - NEFFEX.mp3" type="audio/mpeg">
             </audio>
             <input type= "range" value="0" id="progress"> 
@@ -34,42 +34,47 @@
         </div>
     </div>
 
-    <script>
+<script>
 
-        let progress = document.getElementById("progress");
-        let song = document.getElementById("song");
-        let ctrlIcon = document.getElementById("ctrlIcon");
+let progress = document.getElementById("progress");
+let song = document.getElementById("song");
+let ctrlIcon = document.getElementById("ctrlIcon");
 
-        song.onloadedmetadata = function(){
-            progress.max = song.duration;
-            progress.value = song.currentTime;
+song.onloadedmetadata = function(){
+        progress.max = song.duration;
+        progress.value = song.currentTime;
 
-        }
-    function playPause(){
-        if(ctrlIcon.classList.contains("fa-pause")){
-            song.pause();
-            ctrlIcon.classList.remove("fa-pause");
-            ctrlIcon.classList.add("fa-play")
-        }
-        else {
-            song.play();
-            ctrlIcon.classList.add("fa-pause")
-            ctrlIcon.classList.remove("fa-play")
-        }
+}
+function playPause(){
+    if(ctrlIcon.classList.contains("fa-pause")){
+        song.pause();
+        ctrlIcon.classList.remove("fa-pause");
+        ctrlIcon.classList.add("fa-play")
     }
-
-    if(song.play()){
-        setInterval(() => {
-            progress.value = song.currentTime;
-        }, 500);
-
+    else {
+        song.play();
+        ctrlIcon.classList.add("fa-pause")
+        ctrlIcon.classList.remove("fa-play")
     }
+}
+
+if(song.play()){
+    setInterval(() => {
+        progress.value = song.currentTime;
+    }, 500);
+
+}
 
 progress.onchange = function(){
     song.play();
+    song.currentTime = progress.value;
+    ctrlIcon.classList.add("fa-pause")
+    ctrlIcon.classList.remove("fa-play")
 }
 
-    </script>
+
+
+</script>
 
 </body>
 </html>
